[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts_Scenes/PhoneScenes/AppSlates/GameplayAppSlates/TextMessenger/ConversationEntryNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts_Scenes/TestScenes/ConversationEntryTester.gd" type="Script" id=2]
[ext_resource path="res://TestAssets/TestConversationDatas/TestJSONResource_0.tres" type="Resource" id=3]

[node name="ConversationEntryTesterAppSlate" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ConversationEntryNode" parent="." instance=ExtResource( 1 )]
conversation_resource = ExtResource( 3 )

[node name="OnButton" type="Button" parent="."]
margin_left = 342.0
margin_top = 3.0
margin_right = 396.0
margin_bottom = 23.0

[node name="Label" type="Label" parent="OnButton"]
margin_right = 40.0
margin_bottom = 14.0
text = "Slate On
"

[node name="OffButton" type="Button" parent="."]
margin_left = 562.0
margin_top = 1.0
margin_right = 616.0
margin_bottom = 23.0

[node name="Label" type="Label" parent="OffButton"]
margin_top = 2.0
margin_right = 54.0
margin_bottom = 33.0
text = "Slate Off
"

[connection signal="pressed" from="OnButton" to="." method="_on_OnButton_pressed"]
[connection signal="pressed" from="OffButton" to="." method="_on_OffButton_pressed"]
